-------------------------------------------------------------------------------
Changes in version 1.042

- Fixed a bug in counting the length of signed and unsigned long long
  integers (0 was counted as having zero length).

- Fixed bug in error return of ibuf_openreadclose.  Thanks Gerrit Pape.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.041

- Modified cli-generate to add man page and HTML output options, and
  more formatting commands.

- Tweaked the hmac_finish prototype to properly indicate that the
  midstate is const and unmodified by the function.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.040

- Added cli-generate, a program to produce C header and source from
  command-line interface description files.

- Modified the crypto HMAC code to do precalculation of the intermediate
  hash results.

- Fixed base64 decoding on systems where char is unsigned by default.
  Thanks Gerrit Pape.

- Tweaked the ghash_add function to return a pointer to the newly
  created entry (since some uses will want to use it immediately).

- Stop blocking SIGSEGV with the sig_all_* functions, as this has
  resulted in bugs causing endless signal loops.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.031

- Brown paper bag release to fix missing header file for HMAC support.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/