@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 1.042
 
+- Added support to bg-installer for installing shared libraries with
+  libtool.
+
 - Fixed a bug in counting the length of signed and unsigned long long
   integers (0 was counted as having zero length).
 
